syntax = "proto3";

package chat;

option go_package = "github.com/knighthell-family/knighthell-family-idl/chat";

import "google/protobuf/timestamp.proto";
import "chat-user.proto";

message ChatRoom {
  string id = 1;

  ChatUser createdBy = 2;
  google.protobuf.Timestamp createdDateTimeUTC = 3;
  optional ChatUser updatedBy = 4;
  optional google.protobuf.Timestamp updatedDateTimeUTC = 5;
  optional ChatUser deletedBy = 6;
  optional google.protobuf.Timestamp deletedDateTimeUTC = 7;

  optional string title = 8;
  int32 participantCount = 9;
}