syntax = "proto3";

package chat;

option go_package = "github.com/knighthell-family/knighthell-family-idl/chat";

import "google/protobuf/timestamp.proto";

message ChatUser {
  string id = 1;

  string email = 2;
  string displayName = 3;
  google.protobuf.Timestamp createdDateTimeUTC = 4;

  optional string photoUrl = 5;
}